style.css
@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');

.configdesc{
    width: 290px;
    height: 390px;
    border-radius: 10px;
    background-color: rgb(255, 255, 255);
    box-shadow: 0px 2px 4px rgba(107, 107, 107, 0.418);
    margin-left: 4.5%;
    margin-bottom: 2%;
    float: left;
    cursor: pointer;
    transition: 0.3s;
}

.configdesc:hover{
    transform: scale(1.04);
}

body{
    background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
}

.free{
    text-decoration: none;
    text-align: center;
    font-family: sans-serif;
    margin-top: 4%;
    position: relative;
    color: rgb(255, 255, 255);
}

.paid{
    text-decoration: none;
    font-family: sans-serif;
    text-align: center;
    position: relative;
    clear: both;
    color: white;
}

.line{
    width: 80px;
    height: 7px;
    background-image: linear-gradient(19deg, rgb(33, 253, 81) 0%, rgb(128, 255, 255) 100%);
    margin: auto;
    margin-top: -0.7%;
    border-radius: 10px;
    margin-bottom: 4%
}

img{
    width: 100%;
    object-fit: cover;
    border-radius: 10px 10px 0px 0px;
    margin-bottom: 0%;
    height: 36%;
}

a{
    font-family: 'Montserrat', sans-serif;
    font-weight: 500;
    background-image: linear-gradient(19deg, rgb(194, 244, 255) 0%, rgb(239, 204, 255) 100%);
    color: rgb(32, 32, 32);
    outline-width: 3px;
    width: 75%;
    border-radius: 60px;
    padding: 5% 7% 5%;
    letter-spacing: 40%;
    position: relative;
    top: 3%;
    left: 27%;
    text-decoration: none;
}

a:hover{
    background-image: linear-gradient(19deg, #21D4FD 0%, rgb(215, 128, 255) 100%);
}

.apaid{
    font-family: 'Montserrat', sans-serif;
    font-weight: 500;
    background-image: linear-gradient(19deg, rgb(255, 159, 154) 0%, rgb(255, 225, 181) 100%);
    color: rgb(32, 32, 32);
    outline-width: 3px;
    width: 40%;
    border-radius: 60px;
    padding: 5% 7% 5%;
    letter-spacing: 40%;
    position: relative;
    top: 3%;
    left: 27%;
    text-decoration: none;
    transition: 0.3s;
}

.apaid:hover{
    background-image: linear-gradient(19deg, rgb(255, 50, 40) 0%, rgb(255, 162, 86) 100%);
    cursor:pointer;
}

button{
    background-image: linear-gradient(19deg, rgb(255, 159, 154) 0%, rgb(255, 225, 181) 100%);
    color: rgb(32, 32, 32);
    outline-width: 3px;
    width: 40%;
    border-radius: 60px;
    padding: 5% 7% 5%;
    letter-spacing: 40%;
    position: relative;
    left: 27%;
    margin-top:-10%;
    text-decoration: none;
    transition: 0.3s;
    border:none;
    font-size: 15px;
}

p{
    left: 10%;
    position: relative;
    font-family: sans-serif;
}

.lin2{
    top: -49%;
    position: relative;
    width: 100%;
    height: 0.3%;
    background-color: rgba(114, 114, 114, 0.178);
}

.config{
    box-sizing: border-box
}

.redline{
    width: 80px;
    height: 7px;
    margin: auto;
    margin-top: -0.7%;
    border-radius: 10px;
    margin-bottom: 4%;
    background-image: linear-gradient(19deg, rgb(255, 50, 40) 0%, rgb(255, 139, 86) 100%);
}

